force-app/main/default/objects/Basket__c/Basket__c.object-meta.xml
<CustomObject>
    <label>Basket</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Basket #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Basket</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>