force-app/main/default/objects/Basket__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Basket</relationshipLabel>
    <relationshipName>Basket</relationshipName>
    <type>Lookup</type>
</CustomField>