force-app/main/default/objects/Basket__c/fields/Basket_Details__c.field-meta.xml
<CustomField>
    <fullName>Basket_Details__c</fullName>
    <description>Basket Details</description>
    <label>Basket Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>