force-app/main/default/objects/Basket__c/fields/Basket_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Basket_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Checkout Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>