force-app/main/default/objects/Basket__c/fields/Basket_Source__c.field-meta.xml
<CustomField>
    <fullName>Basket_Source__c</fullName>
    <label>Basket Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>MyAccount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>