force-app/main/default/objects/Basket__c/fields/BasketId__c.field-meta.xml
<CustomField>
    <fullName>BasketId__c</fullName>
    <label>BasketId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>