force-app/main/default/objects/Basket__c/fields/Donation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Donation_Date_Time__c</fullName>
    <label>Donation Date Time</label>
    <type>DateTime</type>
</CustomField>