force-app/main/default/objects/Basket__c/fields/Donor_Details__c.field-meta.xml
<CustomField>
    <fullName>Donor_Details__c</fullName>
    <label>Donor Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>