force-app/main/default/objects/Basket__c/fields/Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status__c</fullName>
    <description>This is Field is used for calculating Tax on the donation
UK =&gt; Gift Aid Status</description>
    <inlineHelpText>Tax Status</inlineHelpText>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GDPR</valueSetName>
    </valueSet>
</CustomField>