force-app/main/default/objects/Basket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Regional_Office_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Basket_Details__c</columns>
    <columns>Payment_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>